<resources>
    <string name="app_name">Scorer</string>
    <string name="button_show_upcoming_matches">Upcoming matches</string>
    <string name="welcome_text">Welcome %1$s in the Scorer App for the premier league!
    </string>
    <string name="rules_text">
        After registration or restoration you can list the upcoming matches to which you
        can bet! You can also see other peoples points on a tablo so you know when its time to step on the gas.
        If you have games that you watch out for, you can add them to favorites. You can also see your bets under the "Bets" tab.
        Good luck and may the best win!
    </string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="actual_matches">Upcoming matches</string>
    <string name="users">Users</string>
    <string name="favourite_matches">Favourite matches</string>
    <string name="standing">Users</string>
    <string name="bets">Bets</string>
    <string name="home">Home</string>
    <string name="welcome">Welcome</string>
    <string name="button_restore">Restore</string>
    <string name="button_register">Register</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
</resources>
